# freview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  README.md  VERSION_MANAGEMENT.md  install_freview.sh  main.py  pyproject.toml
freview/: __init__.py  api_analyzer.py  cli.py  config.py  database_analyzer.py  model_checker.py  project_analyzer.py  utils.py
tests/: conftest.py  test_api_analyzer.py  test_database_analyzer.py  test_model_checker.py  test_project_analyzer.py
